--- a/index.html
+++ b/index.html
@@ -200,11 +200,7 @@
             <span id="address-details"></span>
           </p>
         </div>
-        <div class="col-6">
-          <h3 class="text-end">
-            Delivery cost: ksh <span id="delivery-cost">500</span>
-          </h3>
-        </div>
+        <div class="col-6"></div>
       </div>
       <div class="row">
         <div class="col-6">
@@ -233,7 +229,6 @@
       integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
       crossorigin="anonymous"
     ></script>
-
     <script src="/js/app.js"></script>
   </body>
 </html>
